# geometry

./: Cargo.toml  collision.rs  converter.rs  mod.rs
base/: angle.rs  line.rs  line_segment.rs  mod.rs  point.rs  size.rs  vector.rs
benches/: collision_benchmark.rs  geometry_benchmark.rs
benches/benchmarks/: collision_functions.rs  mod.rs  polygon_creation.rs
collision/: bounding_box.rs  detection.rs
examples/: collision_bounding_box.rs  collision_box_box.rs  collision_box_point.rs  collision_box_ray.rs  collision_playground.rs  collision_ray.rs  collision_rectangle.rs  collision_rectangle_point.rs
line/: line.rs  line_segment.rs  polyline.rs
shape/: circle.rs  hexagon.rs  mod.rs  polygon.rs  rectangle.rs  shape.rs
src/: lib.rs
src/base/: angle.rs  line.rs  point.rs  scale.rs  size.rs  vector.rs
src/collision/: bounding_box.rs  collidable.rs  detection.rs  hit.rs  mod.rs  ray.rs
src/shape/: circle.rs  hexagon.rs  mod.rs  polygon.rs  rectangle.rs  shape.rs
