[package]
name = "geometry"
version = "0.1.0"
authors = ["acerne <a.cerne89@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float_eq = "0.5.0"

[dev-dependencies]
criterion = "0.3.3"
ggez = "0.5.1"

[[bench]]
name = "geometry_benchmark"
harness = false

[lib]
name = "geometry"

[[example]]
name = "collision_testing_initiative_point"
